--- a/styles/main.css
+++ b/styles/main.css
@@ -7183,7 +7183,7 @@ Created using IcoMoon - icomoon.io
 
 .cc-education .cc-education-header {
   padding-top: 60px;
-  padding-right: 0;
+/*  padding-right: 0; */
   text-align: center;
   color: #fff;
 }
